# Udacity-Capstone-Project

./: CMakeLists.txt  LICENSE  README.md
modules/: FindBULLET.cmake
shaders/: lighted.fs  lighted.vs  simple.fs  simple.vs
src/: app.cpp  app.hpp  main.cpp
src/gfx/: modelType.cpp  modelType.hpp  shader.cpp  shader.hpp  shaderType.hpp
src/logic/: collisionEvent.cpp  collisionEvent.hpp  enemy.cpp  enemy.hpp  gameLogic.cpp  gameLogic.hpp
src/managers/: displayManager.cpp  displayManager.hpp  modelManager.cpp  modelManager.hpp  physicsManager.cpp  physicsManager.hpp  sceneManager.cpp  sceneManager.hpp  shaderManager.cpp  shaderManager.hpp
src/scene/: camera.cpp  camera.hpp  sceneObject.cpp  sceneObject.hpp
